--- a/Presentacion/Presentacion.vbproj
+++ b/Presentacion/Presentacion.vbproj
@@ -393,6 +393,12 @@
     <Compile Include="F0_PagosCreditoCompraUlt.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="F0_Ventas.designer.vb">
+      <DependentUpon>F0_Ventas.vb</DependentUpon>
+    </Compile>
+    <Compile Include="F0_Ventas.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form1.Designer.vb">
       <DependentUpon>Form1.vb</DependentUpon>
     </Compile>
@@ -1185,6 +1191,9 @@
     <EmbeddedResource Include="F0_PagosCreditoCompraUlt.resx">
       <DependentUpon>F0_PagosCreditoCompraUlt.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="F0_Ventas.resx">
+      <DependentUpon>F0_Ventas.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
@@ -1740,6 +1749,7 @@
     <None Include="Resources\ASIGNAR_PEDIDOS.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\14.png" />
     <Content Include="Resources\add.png" />
     <Content Include="Resources\asiento.png" />
     <Content Include="Resources\cobro.png" />
