--- a/DATA/DATA.vbproj
+++ b/DATA/DATA.vbproj
@@ -269,6 +269,15 @@
     <Compile Include="EntityDataModel\BDDistBHF\TO0043.vb">
       <DependentUpon>BDDistBHFModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="EntityDataModel\BDDistBHF\TO005.vb">
+      <DependentUpon>BDDistBHFModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EntityDataModel\BDDistBHF\TO0051.vb">
+      <DependentUpon>BDDistBHFModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EntityDataModel\BDDistBHF\TO0052.vb">
+      <DependentUpon>BDDistBHFModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="EntityDataModel\BDDistBHF\TP001.vb">
       <DependentUpon>BDDistBHFModel.tt</DependentUpon>
     </Compile>
