--- a/Presentacion/Presentacion.vbproj
+++ b/Presentacion/Presentacion.vbproj
@@ -376,6 +376,12 @@
     <Compile Include="F02_Compra.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="F02_MovimientoPack.designer.vb">
+      <DependentUpon>F02_MovimientoPack.vb</DependentUpon>
+    </Compile>
+    <Compile Include="F02_MovimientoPack.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="F02_Precio.Designer.vb">
       <DependentUpon>F02_Precio.vb</DependentUpon>
     </Compile>
@@ -1185,6 +1191,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="F02_Compra.resx">
       <DependentUpon>F02_Compra.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="F02_MovimientoPack.resx">
+      <DependentUpon>F02_MovimientoPack.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="F02_Precio.resx">
       <DependentUpon>F02_Precio.vb</DependentUpon>
