--- a/ENTITY/ENTITY.vbproj
+++ b/ENTITY/ENTITY.vbproj
@@ -67,6 +67,7 @@
     <Compile Include="Base\Bitacora.vb" />
     <Compile Include="Caja\CajaCorte\View\VCajaCambio.vb" />
     <Compile Include="Caja\CajaDeposito\View\VCajaDeposito.vb" />
+    <Compile Include="Caja\Report\VCajaGeneral.vb" />
     <Compile Include="Global\View\VCombo.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
