Cambios Varios Lily 09-03-20

--- a/Presentacion/Presentacion.vbproj
+++ b/Presentacion/Presentacion.vbproj
@@ -1798,6 +1798,7 @@
     <Content Include="Resources\asiento.png" />
     <Content Include="Resources\cobro.png" />
     <None Include="Resources\descuentos.png" />
+    <None Include="Resources\volver.png" />
     <Content Include="SqlServerTypes\Loader.cs" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
