Cambios Varios Lily 13-03-2020

--- a/Presentacion/Presentacion.vbproj
+++ b/Presentacion/Presentacion.vbproj
@@ -627,6 +627,12 @@
     <Compile Include="R01_SaldoEquipo.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="R01_SaldoFisicoValorado.designer.vb">
+      <DependentUpon>R01_SaldoFisicoValorado.vb</DependentUpon>
+    </Compile>
+    <Compile Include="R01_SaldoFisicoValorado.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="R01_StockDisponible.Designer.vb">
       <DependentUpon>R01_StockDisponible.vb</DependentUpon>
     </Compile>
@@ -854,6 +860,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>R_saldoCreditoCliente.rpt</DependentUpon>
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\R_SaldosFisicoValorado.vb">
+      <DependentUpon>R_SaldosFisicoValorado.rpt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <SubType>Component</SubType>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="Reportes\R_StockDisponible.vb">
       <DependentUpon>R_StockDisponible.rpt</DependentUpon>
@@ -1363,6 +1375,9 @@
     <EmbeddedResource Include="R01_SaldoEquipo.resx">
       <DependentUpon>R01_SaldoEquipo.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="R01_SaldoFisicoValorado.resx">
+      <DependentUpon>R01_SaldoFisicoValorado.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="R01_StockDisponible.resx">
       <DependentUpon>R01_StockDisponible.vb</DependentUpon>
     </EmbeddedResource>
@@ -1506,6 +1521,10 @@
     <EmbeddedResource Include="Reportes\R_saldoCreditoCliente.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>R_saldoCreditoCliente.vb</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\R_SaldosFisicoValorado.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>R_SaldosFisicoValorado.vb</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\R_StockDisponible.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
