--- a/DATA/App.Config
+++ b/DATA/App.Config
@@ -29,7 +29,7 @@
     </sharedListeners>
   </system.diagnostics>
   <connectionStrings>
-    <add name="BDDistBHFEntities" connectionString="metadata=res://*/EntityDataModel.BDDistBHF.BDDistBHFModel.csdl|res://*/EntityDataModel.BDDistBHF.BDDistBHFModel.ssdl|res://*/EntityDataModel.BDDistBHF.BDDistBHFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=BDDistBHF_CF;persist security info=True;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="BDDistBHFEntities" connectionString="metadata=res://*/EntityDataModel.BDDistBHF.BDDistBHFModel.csdl|res://*/EntityDataModel.BDDistBHF.BDDistBHFModel.ssdl|res://*/EntityDataModel.BDDistBHF.BDDistBHFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=BDDistBHF_CF20;persist security info=True;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
     <!--<add name="BDDistBHFEntities" connectionString="metadata=res://*/EntityDataModel.BDDistBHF.BDDistBHFModel.csdl|res://*/EntityDataModel.BDDistBHF.BDDistBHFModel.ssdl|res://*/EntityDataModel.BDDistBHF.BDDistBHFModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\MSSQLSERVER2014;initial catalog=BDDistBHF;persist security info=True;user id=sa;password=SqlServer2014.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>-->
   </connectionStrings>
   <entityFramework>
