--- a/Presentacion/Presentacion.vbproj
+++ b/Presentacion/Presentacion.vbproj
@@ -633,6 +633,12 @@
     <Compile Include="R01_SaldoFisicoValorado.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="R01_SaldoProductoFiltros.Designer.vb">
+      <DependentUpon>R01_SaldoProductoFiltros.vb</DependentUpon>
+    </Compile>
+    <Compile Include="R01_SaldoProductoFiltros.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="R01_StockDisponible.Designer.vb">
       <DependentUpon>R01_StockDisponible.vb</DependentUpon>
     </Compile>
@@ -863,6 +869,12 @@
     </Compile>
     <Compile Include="Reportes\R_SaldosFisicoValorado.vb">
       <DependentUpon>R_SaldosFisicoValorado.rpt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <SubType>Component</SubType>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Reportes\R_StockActualFiltros.vb">
+      <DependentUpon>R_StockActualFiltros.rpt</DependentUpon>
       <AutoGen>True</AutoGen>
       <SubType>Component</SubType>
       <DesignTime>True</DesignTime>
@@ -1378,6 +1390,9 @@
     <EmbeddedResource Include="R01_SaldoFisicoValorado.resx">
       <DependentUpon>R01_SaldoFisicoValorado.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="R01_SaldoProductoFiltros.resx">
+      <DependentUpon>R01_SaldoProductoFiltros.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="R01_StockDisponible.resx">
       <DependentUpon>R01_StockDisponible.vb</DependentUpon>
     </EmbeddedResource>
@@ -1525,6 +1540,10 @@
     <EmbeddedResource Include="Reportes\R_SaldosFisicoValorado.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>R_SaldosFisicoValorado.vb</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\R_StockActualFiltros.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>R_StockActualFiltros.vb</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\R_StockDisponible.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
