--- a/Presentacion/Presentacion.vbproj
+++ b/Presentacion/Presentacion.vbproj
@@ -388,6 +388,12 @@
     <Compile Include="F02_MovimientoPack.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="F02_PedidoNuevo.Designer.vb">
+      <DependentUpon>F02_PedidoNuevo.vb</DependentUpon>
+    </Compile>
+    <Compile Include="F02_PedidoNuevo.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="F02_Precio.Designer.vb">
       <DependentUpon>F02_Precio.vb</DependentUpon>
     </Compile>
@@ -1275,6 +1281,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="F02_MovimientoPack.resx">
       <DependentUpon>F02_MovimientoPack.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="F02_PedidoNuevo.resx">
+      <DependentUpon>F02_PedidoNuevo.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="F02_Precio.resx">
       <DependentUpon>F02_Precio.vb</DependentUpon>
