--- a/Presentacion/Presentacion.vbproj
+++ b/Presentacion/Presentacion.vbproj
@@ -451,6 +451,12 @@
     <Compile Include="Mapas\R0_UTilidadPorProducto.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ProgramaReporte\F01_ReporteCompras.Designer.vb">
+      <DependentUpon>F01_ReporteCompras.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ProgramaReporte\F01_ReporteCompras.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="ProgramaReporte\F01_ReporteVentaFact.Designer.vb">
       <DependentUpon>F01_ReporteVentaFact.vb</DependentUpon>
     </Compile>
@@ -1365,6 +1371,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Mapas\R0_UTilidadPorProducto.resx">
       <DependentUpon>R0_UTilidadPorProducto.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProgramaReporte\F01_ReporteCompras.resx">
+      <DependentUpon>F01_ReporteCompras.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ProgramaReporte\F01_ReporteVentaFact.resx">
       <DependentUpon>F01_ReporteVentaFact.vb</DependentUpon>
